--- a/2022_0411_01.vcxproj
+++ b/2022_0411_01.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{110bc921-a8fc-4c51-a1be-4e9696aeeb8e}</ProjectGuid>
     <RootNamespace>My2022041101</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>DirectXGame</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
